[package]
name = "imagekit"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
thiserror = "1.0"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio-util = { version = "0.7", features = ["io"] }
mime = "0.3"
prometheus = { version = "0.13", optional = true }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "avif"] }
bytes = "1"
http = "0.2"
time = "0.3"
async-trait = "0.1"
futures = "0.3"
tower-http = { version = "0.5", features = ["fs"] }
tower = { version = "0.4", features = ["util"] }
tower_governor = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
webp = "0.3"
sled = "0.34"  # Pure Rust alternative to RocksDB
lazy_static = "1.4"  # For global metrics





[features]
default = ["image-backend"]
# Use high-performance libvips via the `vips` crate when available.
libvips-backend = []
image-backend = []
